# llm-port-core

./: .env  .gitignore  .pre-commit-config.yaml  .tmp_dashboard_probe.py  Dockerfile  NOTICE  OFFICIAL.md  README-Lang.md  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: cli-release.yml  docker-build-reusable.yml  docker-publish.yml  node-agent-release.yml  release.yml
airgap_backend/: __main__.py  settings.py  tkq.py
airgap_backend/db/: utils.py
airgap_backend/web/: application.py  lifespan.py
app/: app.css  i18n.ts  root.tsx  routes.ts  theme.ts
app/api/: admin.ts  llm.ts  llmGraph.ts  mcp.ts  rag.ts  services.ts  systemSettings.ts
app/components/: Chips.tsx  ContainerLogViewer.tsx  ContainerLogsDialog.tsx  DataTable.tsx  GaugeCard.tsx  ModulesTab.tsx  ProviderWizardDialog.tsx  VllmEngineArgsPanel.tsx
app/lib/: ServicesContext.tsx  adminConstants.tsx  adminSettings.ts  useNavOrder.ts
app/routes/: admin.audit.tsx  admin.containers.$id.tsx  admin.containers.tsx  admin.images.tsx  admin.networks.tsx  admin.stacks.tsx  admin.tsx  home.tsx  login.tsx
deploy/: docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.rmq-local.yml
deploy/kube/: db.yml  namespace.yml
deploy/systemd/: llm-port-node-agent.service  llmport-agent.service
docs/: agent-api.md  api-sequence.md  features.md  gateway-architecture.md  system-init-wizard.md  system-settings.md
i18n/de/: chat.json  common.json
i18n/en/: common.json
i18n/es/: chat.json  common.json
i18n/fr/: common.json
i18n/zh/: chat.json  common.json
initdb/: 01-init.sql  seed_mailer_settings.sql  seed_pii_settings.sql
llm_port_api/: .pre-commit-config.yaml  Dockerfile  OFFICIAL.md  README.md  __init__.py  alembic.ini  docker-compose.yml  pyproject.toml  settings.py  tkq.py
llm_port_api/db/: base.py  dependencies.py  utils.py
llm_port_api/deploy/: docker-compose.dev.yml  docker-compose.otlp.yml
llm_port_api/docs/: api-sequence.md  database.md  gateway-architecture.md
llm_port_api/llm_port_api/: __main__.py  log.py  tkq.py
llm_port_api/services/: registry.py
llm_port_api/tests/: __init__.py  test_gateway_api.py  test_gateway_limits.py  test_gateway_observability.py  test_pii_policy.py  test_pricing_service.py
llm_port_api/web/: application.py  lifespan.py
llm_port_backend/: .tmp_dashboard_probe.py  Dockerfile  __init__.py  __main__.py  docker-compose.yml  pyproject.toml  settings.py  tkq.py
llm_port_backend/db/: dependencies.py  utils.py
llm_port_backend/deploy/: docker-compose.dev.yml  docker-compose.rmq-local.yml
llm_port_backend/llm_port_backend/: __init__.py  log.py  settings.py  tkq.py
llm_port_backend/scripts/: backfill_default_user_role_via_api.py
llm_port_backend/services/: __init__.py  core_modules.py  module_registry.py
llm_port_backend/tests/: __init__.py  conftest.py  test_chat_rbac.py  test_containers_api.py  test_root_mode.py  test_system_settings_api.py
llm_port_backend/web/: application.py  lifespan.py
llm_port_cli/: NOTICE  OFFICIAL.md  README.md  pyproject.toml
llm_port_frontend/: package-lock.json  package.json
llm_port_frontend/app/: branding.ts  i18n.ts  theme-mode.tsx
llm_port_mcp/: Dockerfile  OFFICIAL.md  log.py  pyproject.toml  settings.py
llm_port_mcp/db/models/: mcp.py
llm_port_mcp/llm_port_mcp/: __main__.py
llm_port_mcp/llm_port_mcp/db/: crypto.py  session.py
llm_port_mcp/llm_port_mcp/db/migrations/: env.py
llm_port_mcp/llm_port_mcp/db/migrations/versions/: 2026-03-13-10-00_a1b2c3d4e5f6.py  2026-03-16-14-00_b2c3d4e5f6a7.py  2026-04-07-10-00_c3d4e5f6a7b8.py
llm_port_mcp/llm_port_mcp/db/models/: mcp.py
llm_port_mcp/llm_port_mcp/services/: dao.py  privacy_proxy.py
llm_port_mcp/llm_port_mcp/services/transport/: base.py  sse.py  stdio.py  streamable_http.py
llm_port_mcp/llm_port_mcp/web/: lifespan.py
llm_port_mcp/llm_port_mcp/web/api/: auth.py
llm_port_mcp/llm_port_mcp/web/api/admin/: schemas.py
llm_port_mcp/llm_port_mcp/web/api/internal/: views.py
llm_port_mcp/services/: connection_manager.py  discovery.py  privacy_proxy.py  schema_mapper.py
llm_port_mcp/services/transport/: streamable_http.py
llm_port_mcp/web/: application.py
llm_port_mcp/web/api/: auth.py  router.py
llm_port_mcp/web/api/admin/: schemas.py  views.py
llm_port_node_agent/: __init__.py  __main__.py  backend_client.py  collectors.py  command_verifier.py  config.py  container_log_forwarder.py  dispatcher.py  event_buffer.py  health_supervisor.py  image_loader.py  log_collector.py  loki_client.py  model_puller.py  models.py  node_agent.spec  policy_guard.py  preflight.py  pyproject.toml  runtime_manager.py  service.py  state_store.py  stream_client.py  system_updater.py
llm_port_node_agent/gpu/: __init__.py  amd.py  apple.py  nvidia.py
llm_port_node_agent/llm_port_node_agent/: __init__.py  __main__.py  backend_client.py  config.py  container_log_forwarder.py  dispatcher.py  health_supervisor.py  image_loader.py  loki_client.py  model_puller.py  models.py  policy_guard.py  runtime_manager.py  service.py  state_store.py  stream_client.py
llm_port_node_agent/runtimes/: __init__.py  docker.py  podman.py
llm_port_node_agent/tests/: test_command_verifier.py  test_event_buffer.py  test_model_puller.py  test_policy_guard.py
llm_port_pii/: Dockerfile  README.md  __init__.py  __main__.py  alembic.ini  docker-compose.yml  log.py  pyproject.toml  settings.py  tkq.py
llm_port_pii/db/: base.py  dependencies.py
llm_port_pii/web/: __init__.py  (+2 more)
llm_port_shared/: docker-compose.dev.yaml  docker-compose.gpu.yaml  docker-compose.yaml
llm_port_skills/: Dockerfile  __main__.py  docker-compose.yml  pyproject.toml
scripts/: backfill_default_user_role.py
tests/: conftest.py  test_collectors.py  test_containers_api.py  test_dispatcher.py  test_dummy.py  test_gateway_api.py  test_gateway_limits.py  test_llm_graph_api.py  test_logs_api.py  test_policy_enforcement.py  test_root_mode.py  test_runtime_manager.py  test_state_store.py  test_system_settings_api.py
(+638 files in other folders)
