[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-port-node-agent"
version = "0.1.0"
description = "Node execution agent for llm-port cluster-managed runtimes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "psutil>=5.9,<8.0",
  "websockets>=12,<16",
]

[project.scripts]
llm-port-node-agent = "llm_port_node_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_port_node_agent"]
