[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmport-agent"
version = "0.1.2"
description = "Node execution agent for llm-port cluster-managed runtimes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "psutil>=5.9,<8.0",
  "websockets>=12,<16",
]

[project.scripts]
llm-port-node-agent = "llm_port_node_agent.__main__:main"

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0,<7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_port_node_agent"]
